Se agregan headers al cors